# adventofcode-2020

./: .gitignore  Cargo.toml  LICENSE  README.md  advent_of_code.opam  advent_of_code.opam.locked  aoc  build.sh  dune-project  esy.json  package-lock.json  package.json  requirements.txt  tsconfig.json  tslint.json
.github/workflows/: main.yml
day-01/input/: badouralix.txt  bebert.txt  coco.txt  djou.txt  enizor.txt  giltho.txt  jd.txt  lelithium.txt  skasch.txt
day-01/part-1/: ayc0.nim  ayoub.cpp  badouralix.js  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  eriadrim.go  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.c  lelithium.zig  sfluor.go  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.java
day-01/part-2/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  eriadrim.go  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.c  lelithium.zig  sfluor.go  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.java
day-02/input/: enizor.txt  jd.txt  sfluor.txt  silvestre.txt
day-02/part-1/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  eriadrim.go  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.go  julesdt.py  lelithium.c  lelithium.zig  sfluor.go  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.c
day-02/part-2/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  eriadrim.go  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.go  julesdt.py  lelithium.c  lelithium.zig  sfluor.go  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.c
day-03/input/: ayoub.txt  claussa.txt  enizor.txt  giltho.txt  youyoun.txt
day-03/part-1/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  eriadrim.go  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.rb  lelithium.zig  sfluor.go  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.go
day-03/part-2/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  eriadrim.go  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.rb  lelithium.zig  sfluor.go  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.go
day-04/part-1/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go
day-04/part-2/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go
day-05/input/: david.txt  giltho.txt  julesdt.txt
day-05/part-1/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  jon.py  jon.sh  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-05/part-2/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  jon.py  jon.sh  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-06/input/: djou.txt  evqna.txt  giltho.txt  lelithium.txt
day-06/part-1/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-06/part-2/: ayc0.nim  ayoub.cpp  badouralix.py  bebert.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-07/input/: ayoub.txt  enizor.txt  giltho.txt  jd.txt
day-07/part-1/: ayc0.js  ayc0.nim  ayoub.cpp  badouralix.py  bebert.py  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-07/part-2/: ayc0.js  ayc0.nim  ayoub.cpp  badouralix.py  bebert.py  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-08/input/: ayoub.txt  giltho.txt  jon.txt
day-08/part-1/: ayc0.js  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-08/part-2/: ayc0.js  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  giltho.ml  jd.rs  jon.py  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-09/input/: ayoub.txt  evqna.txt  giltho.txt  julesdt.txt  lelithium.txt  skasch.txt
day-09/part-1/: ayc0.js  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-09/part-2/: ayc0.js  ayoub.cpp  badouralix.py  bebert.pyx  claussa.go  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  julesdt.py  lelithium.zig  silvestre.jl  skasch.cpp  th-ch.py  thore.py  troisdiz.go  youyoun.py
day-10/input/: ayc0.txt  ayoub.txt  enizor.txt  evqna.txt  julesdt.txt  skasch.txt
day-10/part-1/: ayc0.js  ayoub.cpp  badouralix.py  bebert.py  bebert.pyx  coco.py  david.py  djou.go  enizor.rs  evqna.py  giltho.ml  jd.rs  julesdt.py  lelithium.zig  silvestre.jl  silvestre.py  th-ch.go  (+4 more)
esy.lock/: index.json
ictools/: icc  icr
tool/: AOC.py  config.py  create.py  discovery.py  distribution.py  model.py  parser.py  run.py
(+454 files in other folders)
