[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = []
edition="2018"

[dependencies]

[[bin]]
name = "day-01-part-1-enizor"
path = "./day-01/part-1/enizor.rs"

[[bin]]
name = "day-01-part-1-jd"
path = "./day-01/part-1/jd.rs"

[[bin]]
name = "day-01-part-2-enizor"
path = "./day-01/part-2/enizor.rs"

[[bin]]
name = "day-01-part-2-jd"
path = "./day-01/part-2/jd.rs"

[[bin]]
name = "day-02-part-1-enizor"
path = "./day-02/part-1/enizor.rs"

[[bin]]
name = "day-02-part-1-jd"
path = "./day-02/part-1/jd.rs"

[[bin]]
name = "day-02-part-2-enizor"
path = "./day-02/part-2/enizor.rs"

[[bin]]
name = "day-02-part-2-jd"
path = "./day-02/part-2/jd.rs"

[[bin]]
name = "day-03-part-1-enizor"
path = "./day-03/part-1/enizor.rs"

[[bin]]
name = "day-03-part-1-jd"
path = "./day-03/part-1/jd.rs"

[[bin]]
name = "day-03-part-2-enizor"
path = "./day-03/part-2/enizor.rs"

[[bin]]
name = "day-03-part-2-jd"
path = "./day-03/part-2/jd.rs"

[[bin]]
name = "day-04-part-1-enizor"
path = "./day-04/part-1/enizor.rs"

[[bin]]
name = "day-04-part-1-jd"
path = "./day-04/part-1/jd.rs"

[[bin]]
name = "day-04-part-2-enizor"
path = "./day-04/part-2/enizor.rs"

[[bin]]
name = "day-04-part-2-jd"
path = "./day-04/part-2/jd.rs"

[[bin]]
name = "day-05-part-1-enizor"
path = "./day-05/part-1/enizor.rs"

[[bin]]
name = "day-05-part-1-jd"
path = "./day-05/part-1/jd.rs"

[[bin]]
name = "day-05-part-2-enizor"
path = "./day-05/part-2/enizor.rs"

[[bin]]
name = "day-05-part-2-jd"
path = "./day-05/part-2/jd.rs"
